fix gap

--- a/styles/OrderSearch.module.css
+++ b/styles/OrderSearch.module.css
@@ -159,7 +159,7 @@
 }
 
 .itemWrapper .part.user .userInfo {
-    margin-left: 8px;
+    margin-left: 16px;
 }
 
 .itemWrapper .part.user .userName {
